test/tests/operators/from_http/from_http_error_metadata_field_overlap.txt
error: `error_field` and `metadata_field` must not point to same or nested field
 --> tests/operators/from_http/from_http_error_metadata_field_overlap.tql:6:23
  |
6 |           error_field=x,
  |                       ^ 
  ⋮
7 |           metadata_field=x { read_json }
  |                          ^ 
  |
